@@ -1,4 +1,5 @@
 0.14
+ - Move author tests to xt/ directory.
 
 0.13 2015-09-03T17:09:49+02:00
 
